# ROS2_Turtlesim_Catcher

./: README.md
cpp_nodes_pkg/: CMakeLists.txt  package.xml
cpp_nodes_pkg/src/: controller.cpp  spawner.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: cpp_final_pro_udemy.launch.py  final_pro_udemy_py.launch.py  number_app.launch.py  robot_news_activity.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: LedStatus.msg  TurtleArray.msg
python_nodes_pkg/: package.xml  setup.cfg  setup.py
python_nodes_pkg/final_pro_udemy_py/: controller.py  spawner.py
